--- a/notebooks/frequency_analysis.ipynb
+++ b/notebooks/frequency_analysis.ipynb
@@ -1,30 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ff0e5cff8cc0fe8b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T02:33:49.292376Z",
      "start_time": "2025-05-07T02:33:49.254393Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "id": "ff0e5cff8cc0fe8b",
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-05-07T02:33:53.184398Z",
      "start_time": "2025-05-07T02:33:49.331914Z"
-    }
+    },
+    "collapsed": true
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from dewan_h5 import DewanH5\n",
     "from sniffing_dynamics.sniffing.helpers import preprocessing, analysis, plotting\n",
@@ -34,92 +37,40 @@
     "from scipy import signal\n",
     "\n",
     "from pathlib import Path"
-   ],
-   "id": "initial_id",
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d33c157804c8c6e3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T02:33:55.642047Z",
      "start_time": "2025-05-07T02:33:55.623794Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "## Configurables\n",
     "\n",
-    "data_dir = Path('/mnt/r2d2/11_Data/GoodSniffData')\n",
-    "h5_files = Path(data_dir).glob('*.h5')\n",
+    "data_dir = Path(\"/mnt/r2d2/11_Data/GoodSniffData\")\n",
+    "h5_files = Path(data_dir).glob(\"*.h5\")\n",
     "\n",
     "lower_filter_band = 0.01  # Lower Frequency (Hz)\n",
     "upper_filter_band = 100  # Upper Frequency (Hz)\n",
     "pre_fv_time = -1000  # ms before FV"
-   ],
-   "id": "d33c157804c8c6e3",
-   "outputs": [],
-   "execution_count": 3
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bef822f875a599b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T02:37:47.916208Z",
      "start_time": "2025-05-07T02:35:25.691559Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "\n",
-    "output_dir = data_dir.joinpath('output')\n",
-    "output_dir.mkdir(exist_ok=True)\n",
-    "\n",
-    "for h5_file_path in h5_files:\n",
-    "    try:\n",
-    "        print(f'Processing {h5_file_path.name}')\n",
-    "\n",
-    "        with DewanH5(h5_file_path) as h5:\n",
-    "            results = pd.DataFrame()\n",
-    "            _concentration = h5.concentrations[h5.concentrations > 0][0]\n",
-    "            experiment_concentration = \"\".join(np.format_float_scientific(_concentration, 1).split('.'))\n",
-    "            file_output_dir = output_dir.joinpath(f'mouse-{h5.mouse}', experiment_concentration)\n",
-    "\n",
-    "            bp_filter = signal.cheby2(2, 40, [lower_filter_band, upper_filter_band], 'bandpass', output='sos', fs=1000)\n",
-    "            filtered_traces = preprocessing.filter_sniff_traces(h5.sniff, bp_filter, baseline=True, z_score=True)\n",
-    "\n",
-    "\n",
-    "            for trial_number in h5.sniff.keys():\n",
-    "                raw_data = h5.sniff[trial_number].loc[pre_fv_time:]\n",
-    "                filtered_trimmed_trace = filtered_traces[trial_number].loc[pre_fv_time:]\n",
-    "                # plotting.plot_multi_traces([raw_data, filtered_trimmed_trace])\n",
-    "                inhales, exhales, crossings = preprocessing.get_trace_features(filtered_trimmed_trace)\n",
-    "                crossing_pairs = np.fromiter(zip(crossings[:-1], crossings[1:]), dtype=object)\n",
-    "\n",
-    "                true_inhales, true_exhales = preprocessing.get_true_peaks(inhales, exhales, crossing_pairs)\n",
-    "\n",
-    "                true_inhales_post_fv = true_inhales.loc[0:]\n",
-    "                first_true_inhale = true_inhales_post_fv.iloc[0]\n",
-    "                first_crossing = first_true_inhale['crossing']\n",
-    "\n",
-    "                if first_crossing > 0:\n",
-    "                    crossings = preprocessing.offset_timestamps(first_crossing, filtered_trimmed_trace, true_inhales, true_exhales, crossings)\n",
-    "                inhale_frequencies, exhale_frequencies, inhale_times, exhale_times = analysis.calc_frequencies(true_inhales, true_exhales)\n",
-    "\n",
-    "                _columns = pd.MultiIndex.from_product([[trial_number], ['inhale_time', 'inhale_freq']], names=['Trial', 'Data'])\n",
-    "                all_trial_data = pd.DataFrame(zip(inhale_times, inhale_frequencies), columns=_columns)\n",
-    "\n",
-    "                results = pd.concat([results, all_trial_data], axis=1)\n",
-    "\n",
-    "                plot_output_dir = file_output_dir.joinpath('figures')\n",
-    "                plot_output_dir.mkdir(exist_ok=True, parents=True)\n",
-    "                plotting.plot_crossing_frequencies(filtered_trimmed_trace, true_inhales, true_exhales, inhale_frequencies, exhale_frequencies, inhale_times, exhale_times, crossings, trial_number, plot_output_dir)\n",
-    "            results_path = file_output_dir.joinpath(f'mouse-{h5.mouse}-{experiment_concentration}.xlsx')\n",
-    "            results.to_excel(results_path)\n",
-    "    except Exception as e:\n",
-    "        print(f'Error processing H5 file {h5_file_path}')\n",
-    "        print(e)"
-   ],
-   "id": "bef822f875a599b4",
    "outputs": [
     {
      "name": "stdout",
@@ -185,15 +136,107 @@
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "output_dir = data_dir.joinpath(\"output\")\n",
+    "output_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "for h5_file_path in h5_files:\n",
+    "    try:\n",
+    "        print(f\"Processing {h5_file_path.name}\")\n",
+    "\n",
+    "        with DewanH5(h5_file_path) as h5:\n",
+    "            results = pd.DataFrame()\n",
+    "            _concentration = h5.concentrations[h5.concentrations > 0][0]\n",
+    "            experiment_concentration = \"\".join(\n",
+    "                np.format_float_scientific(_concentration, 1).split(\".\")\n",
+    "            )\n",
+    "            file_output_dir = output_dir.joinpath(\n",
+    "                f\"mouse-{h5.mouse}\", experiment_concentration\n",
+    "            )\n",
+    "\n",
+    "            bp_filter = signal.cheby2(\n",
+    "                2,\n",
+    "                40,\n",
+    "                [lower_filter_band, upper_filter_band],\n",
+    "                \"bandpass\",\n",
+    "                output=\"sos\",\n",
+    "                fs=1000,\n",
+    "            )\n",
+    "            filtered_traces = preprocessing.filter_sniff_traces(\n",
+    "                h5.sniff, bp_filter, baseline=True, z_score=True\n",
+    "            )\n",
+    "\n",
+    "            for trial_number in h5.sniff.keys():\n",
+    "                raw_data = h5.sniff[trial_number].loc[pre_fv_time:]\n",
+    "                filtered_trimmed_trace = filtered_traces[trial_number].loc[pre_fv_time:]\n",
+    "                # plotting.plot_multi_traces([raw_data, filtered_trimmed_trace])\n",
+    "                inhales, exhales, crossings = preprocessing.get_trace_features(\n",
+    "                    filtered_trimmed_trace\n",
+    "                )\n",
+    "                crossing_pairs = np.fromiter(\n",
+    "                    zip(crossings[:-1], crossings[1:]), dtype=object\n",
+    "                )\n",
+    "\n",
+    "                true_inhales, true_exhales = preprocessing.get_true_peaks(\n",
+    "                    inhales, exhales, crossing_pairs\n",
+    "                )\n",
+    "\n",
+    "                true_inhales_post_fv = true_inhales.loc[0:]\n",
+    "                first_true_inhale = true_inhales_post_fv.iloc[0]\n",
+    "                first_crossing = first_true_inhale[\"crossing\"]\n",
+    "\n",
+    "                if first_crossing > 0:\n",
+    "                    crossings = preprocessing.offset_timestamps(\n",
+    "                        first_crossing,\n",
+    "                        filtered_trimmed_trace,\n",
+    "                        true_inhales,\n",
+    "                        true_exhales,\n",
+    "                        crossings,\n",
+    "                    )\n",
+    "                inhale_frequencies, exhale_frequencies, inhale_times, exhale_times = (\n",
+    "                    analysis.calc_frequencies(true_inhales, true_exhales)\n",
+    "                )\n",
+    "\n",
+    "                _columns = pd.MultiIndex.from_product(\n",
+    "                    [[trial_number], [\"inhale_time\", \"inhale_freq\"]],\n",
+    "                    names=[\"Trial\", \"Data\"],\n",
+    "                )\n",
+    "                all_trial_data = pd.DataFrame(\n",
+    "                    zip(inhale_times, inhale_frequencies), columns=_columns\n",
+    "                )\n",
+    "\n",
+    "                results = pd.concat([results, all_trial_data], axis=1)\n",
+    "\n",
+    "                plot_output_dir = file_output_dir.joinpath(\"figures\")\n",
+    "                plot_output_dir.mkdir(exist_ok=True, parents=True)\n",
+    "                plotting.plot_crossing_frequencies(\n",
+    "                    filtered_trimmed_trace,\n",
+    "                    true_inhales,\n",
+    "                    true_exhales,\n",
+    "                    inhale_frequencies,\n",
+    "                    exhale_frequencies,\n",
+    "                    inhale_times,\n",
+    "                    exhale_times,\n",
+    "                    crossings,\n",
+    "                    trial_number,\n",
+    "                    plot_output_dir,\n",
+    "                )\n",
+    "            results_path = file_output_dir.joinpath(\n",
+    "                f\"mouse-{h5.mouse}-{experiment_concentration}.xlsx\"\n",
+    "            )\n",
+    "            results.to_excel(results_path)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing H5 file {h5_file_path}\")\n",
+    "        print(e)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "execution_count": null,
    "id": "1befaf75f09a7700",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
