--- a/notebooks/frequency_analysis.ipynb
+++ b/notebooks/frequency_analysis.ipynb
@@ -166,7 +166,7 @@
     "                h5.sniff, bp_filter, baseline=True, z_score=True\n",
     "            )\n",
     "\n",
-    "            for trial_number in h5.sniff.keys():\n",
+    "            for trial_number in h5.sniff:\n",
     "                raw_data = h5.sniff[trial_number].loc[pre_fv_time:]\n",
     "                filtered_trimmed_trace = filtered_traces[trial_number].loc[pre_fv_time:]\n",
     "                # plotting.plot_multi_traces([raw_data, filtered_trimmed_trace])\n",
@@ -174,7 +174,7 @@
     "                    filtered_trimmed_trace\n",
     "                )\n",
     "                crossing_pairs = np.fromiter(\n",
-    "                    zip(crossings[:-1], crossings[1:]), dtype=object\n",
+    "                    zip(crossings[:-1], crossings[1:], strict=True), dtype=object\n",
     "                )\n",
     "\n",
     "                true_inhales, true_exhales = preprocessing.get_true_peaks(\n",
@@ -202,7 +202,7 @@
     "                    names=[\"Trial\", \"Data\"],\n",
     "                )\n",
     "                all_trial_data = pd.DataFrame(\n",
-    "                    zip(inhale_times, inhale_frequencies), columns=_columns\n",
+    "                    zip(inhale_times, inhale_frequencies, strict=True), columns=_columns\n",
     "                )\n",
     "\n",
     "                results = pd.concat([results, all_trial_data], axis=1)\n",
